# gpuRcuda

./: .gitignore  .travis.yml  DESCRIPTION  Dockerfile  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: RcppExports.R  class-cudaMatrix.R  class-cudaVector.R  class-nvMatrix.R  class-nvVector.R  class.R  classes.R  cudaMatrix.R  cudaVector-class.R  cudaVector.R  hello-gpuRcuda.R  methods-cudaVector.R  methods-nvVector.R  methods-vector.R  methods.R  methods_vector.R  nvMatrix.R  nvVector.R  test_utils.R  typeof.R  wrappers.R  zzz.R
inst/: NEWS.Rd
inst/include/gpuRcuda/: device_matrix.hpp  device_vector.hpp  host_matrix.hpp  host_vector.hpp  thrust_matrix.hpp  thrust_vector.hpp
man/: Arith-dcudaMatrix-dcudaMatrix-method.Rd  Arith-fcudaMatrix-fcudaMatrix-method.Rd  cudaMatMult.Rd  cudaMatrix-class.Rd  cudaMatrix-colSums.Rd  cudaMatrix-methods.Rd  cudaVector-class.Rd  cudaVector-methods.Rd  dcudaMatrix-class.Rd  dcudaVector-class.Rd  dim-cudaMatrix-method.Rd  dim-methods.Rd  dnvMatrix-class.Rd  dnvVector-class.Rd  extract-methods.Rd  fcudaMatrix-class.Rd  fcudaVector-class.Rd  fnvMatrix-class.Rd  fnvVector-class.Rd  gpuRcuda-package.Rd  gpuRcudaMatrix-class.Rd  gpuRcudaVector-class.Rd  grapes-times-grapes-cudaMatrix-cudaMatrix-method.Rd  icudaMatrix-class.Rd  icudaVector-class.Rd  invMatrix-class.Rd  invVector-class.Rd  length-methods.Rd  nrow-gpuRcudaMatrix.Rd  nrow.cudaMatrix.Rd  nvMatrix-class.Rd  nvMatrix-methods.Rd  nvVector-class.Rd  nvVector-methods.Rd  sub-cudaMatrix-missing-missing-missing-method.Rd  typeof-cudaMatrix-method.Rd  typeof-cudaVector-method.Rd  typeof.Rd
src/: Makevars  Makevars.in  Makevars.win  RcppExports.cpp  cudaMatrix_dgemm.cpp  cudaMatrix_sgemm.cpp  device_matrix.cpp  device_vector.cpp  host_matrix.cpp  host_vector.cpp  utils.cpp  vcl_cudaMatrix_axpy.cpp  vcl_cudaMatrix_colMean.cpp  vcl_cudaMatrix_colsum.cpp  vcl_cudaMatrix_gemm.cpp  vcl_cudaMatrix_rowMean.cpp  vcl_cudaMatrix_rowsum.cpp  vcl_daxpy.cu  vcl_dcolMeans.cu  vcl_dcolSums.cu  vcl_dgemm.cu  vcl_drowMeans.cu  vcl_drowSums.cu  vcl_saxpy.cu  vcl_scolMeans.cu  vcl_scolSums.cu  vcl_sgemm.cu  vcl_srowMeans.cu  vcl_srowSums.cu  viennacl_cudaMatrix_sgemm.cpp  viennacl_sgemm.cu
tests/: testthat.R
tests/testthat/: test_cudaMatrix.R  test_cudaMatrix_row_col.R  test_cudaVector.R  test_cuda_gpuMatrix.R  test_nvMatrix.R  test_nvVector.R
